--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "opencv-python>=4.12.0.88",
     "pip>=25.2",
     "scikit-learn>=1.7.2",
+    "streamlit>=1.50.0",
     "tensorflow>=2.20.0",
     "torch>=2.9.0",
     "ultralytics>=8.3.220",
